@@ -1,5 +1,10 @@
 2008-04-01  Jens Granseuer  <jensgr@gmx.net>
 
+	* mixer-support.c: (create_mixer_device_tree_model): sort mixer devices
+	alphabetically (bug #525530)
+
+2008-04-01  Jens Granseuer  <jensgr@gmx.net>
+
 	* sound-properties-capplet.c: (device_added_callback): don't show
 	modems and other unwanted devices (bug #523888)
 
